--- a/portfolio.css
+++ b/portfolio.css
@@ -29,10 +29,13 @@ html {
 
 h1 {
     font-size: 50px;
+    text-align: center;
 }
 
 h2 {
     font-size: 40px;
+    text-align: center;
+
 }
 
 h3 {
@@ -45,30 +48,118 @@ h4 {
 
 
 /*DESKTOP NAV*/
-
 nav,
-.nav-link {
+.navlink {
     display: flex;
 }
 
 nav {
     justify-content: space-around;
     align-items: center;
+    height: 17vh;
 }
 
-.nav-link {
-    color: rgb(53, 53, 53);
+.navlink {
     gap: 2rem;
+    list-style: none;
     font-size: 1.5rem;
+
 }
 
-.nav-link:hover {
+a {
+    color: rgb(53, 53, 53);
+    text-decoration: none;
+}
+
+a:hover {
     color: rgb(154, 140, 152);
     text-decoration: underline;
+    text-underline-offset: 1rem;
 }
 
-.logo {
+.profile-pic {
+    margin-top: 4rem;
+    padding: 1.2rem;
+}
+
+#hamburger-nav {
+    display: none;
+}
+
+.hamburger-menu {
+    display: inline-block;
+    position: relative;
+}
+
+.hamburger-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+}
+
+.hamburger-icon span {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links a {
+    display: block;
+    padding: 10px;
+    text-align: center;
     font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+    list-style: none;
+}
+
+.menu-links open {
+    max-height: 300px;
+}
+
+.hamburger-icon open span:first-child {
+    transform: rotate(45deg);
+    translate: (10px, 5px);
+}
+
+.hamburger-icon open span:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger-icon open span:last-child {
+    transform: rotate(-45deg);
+    translate: (10px, -5px);
+}
+
+.hamburger-icon span :first-child {
+    transform: none;
+}
+
+.hamburger-icon span :first-child {
+    opacity: 1;
+}
+
+.hamburger-icon span :first-child {
+    transform: none;
 }
 
 /*Buttons*/
@@ -117,11 +208,12 @@ nav {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    border-radius: 2rem;
+    margin: 2rem;
+    border-radius: 4rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     background: rgb(154, 140, 152);
-    padding: 1.5rem;
+    padding: 3rem;
 
 }
 
@@ -133,6 +225,20 @@ nav {
     gap: 2.5rem;
     justify-content: center;
 
+}
+
+.project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+    padding: 1rem;
+    margin-left: 1.6rem;
+}
+
+.project-title {
+    margin: 1rem;
+    color: black;
+    justify-content: center;
 }
 
 /*Technologies Section*/
