--- a/portfolio.css
+++ b/portfolio.css
@@ -22,14 +22,15 @@ html {
 
 .profile-pic {
     display: flex;
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
     margin: 1rem;
 }
 
 h1 {
     font-size: 50px;
     text-align: center;
+    font-weight: bolder;
 }
 
 h2 {
