--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,5 @@
 /*GENERAL*/
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap');
 
 * {
     margin: 0;
@@ -20,6 +20,11 @@ html {
 
 }
 
+hr.solid {
+    border-top: 3px solid rgb(53, 53, 53);
+    border-radius: 5px;
+}
+
 .profile-pic {
     display: flex;
     height: 200px;
@@ -28,9 +33,10 @@ html {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 5rem;
     text-align: center;
-    font-weight: bolder;
+    font-weight: 700;
+    font-variant-caps: all-small-caps;
 }
 
 h2 {
@@ -44,7 +50,7 @@ h3 {
 }
 
 h4 {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 
@@ -63,7 +69,7 @@ nav {
 .navlink {
     gap: 2rem;
     list-style: none;
-    font-size: 1.5rem;
+    font-size: 2rem;
 
 }
 
